@@ -1,6 +1,8 @@
 2006-11-22 Kimmo
  PATCH: [ 1600651 ] Manual: clarify folder filter rules about starting mark
   Manual: Filters.xml
+ PATCH: [ 1600658 ] Manual: Add minimize commandline parameter
+  Manual: Command_line.xml
 
 2006-11-21 Tim
  PATCH: [ 1398013 ] Add availability of binary viewing/merging to FAQ
